--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://www.cod.ch.tudelft.nl/"
+baseURL = "https://kaspervaessen.github.io"
 languageCode = "en-us"
 title = "Career Orientation Days"
 themesDir = "themes"
