--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3
         with:
-          images: ghcr.io/wisvch/cod22
+          images: ghcr.io/wisvch/cod
           tags: type=sha, prefix={{date 'YYYYMMDD'}}-
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
