fix homepage url

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://kaspervaessen.github.io"
+baseURL = "https://cod.wisv.ch/"
 languageCode = "en-us"
 title = "Career Orientation Days"
 themesDir = "themes"
@@ -25,7 +25,7 @@ theme = "hugo-hero-theme"
     meta_description = "The Career Orientation Days is an event where computer science and mathematics students have the chance one-on-one conversation with companies."
     meta_og_title = "Career Orientation Days"
     meta_og_type = "website"
-    meta_og_url = "https://cod.ch.tudelft.nl"
+    meta_og_url = "https://cod.wisv.ch/"
     meta_og_image = "https://raw.githubusercontent.com/JugglerX/hugo-hero-theme/master/images/tn.png"
     meta_og_description = "The Career Orientation Days is an event where computer science and mathematics students have the chance one-on-one conversation with companies."
 
